commit to merge

--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -67,7 +67,7 @@
 
                             <div class="col-sm-6">
                                 <h5>Sample</h5>
-                                <div class="sample">
+                                <div id="sample">
                                     Curve Style
                                 </div>
                             </div>
