--- a/source/html/index.html
+++ b/source/html/index.html
@@ -35,6 +35,7 @@
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
+    <!--<script src="vendor/js/moment.min.js"></script>-->
     <script src="vendor/js/ng-file-upload.min.js"></script>
     <script src="vendor/js/angular-modal-service.min.js"></script>
     <script src="vendor/js/jquery-ui.js"></script>
