--- a/source/dialogs/open-project/open-project-modal.html
+++ b/source/dialogs/open-project/open-project-modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade">
+<div class="modal fade" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -39,8 +39,8 @@
                     <div class="form-group">
                         <label class="control-label col-sm-3" for="createAt">Create date:</label>
                         <div class="col-sm-9">
-                            <input type="datetime-local" class="form-control" value="{{ date | date: 'yyyy-MM-dd' }}"
-                                   name="createAt" ng-model="wiModal.createdAt" disabled>
+                            <input type="text" class="form-control" value='{{ wiModal.selectedProject.createdAt | date: "dd-MM-yyyy, h:mm:ss a" }}'
+                                   name="createAt" disabled>
                         </div>
                     </div>
                     <div class="form-group">
