--- a/source/dialogs/new-project/new-project-modal.html
+++ b/source/dialogs/new-project/new-project-modal.html
@@ -16,8 +16,8 @@
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="name">Project name:</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" value="" id="name" name="name" ng-model="name"
-                                       required>
+                                <input type="text" class="form-control" value="" id="name" name="name"
+                                       ng-model="name" required>
                                 <span ng-show="modalNewProject.name.$dirty && modalNewProject.name.$error.required">Required*</span>
                             </div>
                         </div>
@@ -25,24 +25,21 @@
                             <label class="control-label col-sm-3" for="company">Company</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" value="" id="company" name="company"
-                                       ng-model="company"
-                                       ng-click="wiModal.error = null">
+                                       ng-model="company" ng-click="wiModal.error = null" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="department">Department:</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" value="" id="department" name="department"
-                                       ng-model="department"
-                                       ng-click="wiModal.error = null">
+                                       ng-model="department" ng-click="wiModal.error = null" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="description">Description:</label>
                             <div class="col-sm-9">
                             <textarea class="form-control" rows="8" value="" id="description" name="description"
-                                      ng-model="description"
-                                      ng-click="wiModal.error = null">
+                                      ng-model="description" ng-click="wiModal.error = null" required>
                             </textarea>
                             </div>
                         </div>
