--- a/source/dialogs/curve-properties/curve-properties-modal-test.html
+++ b/source/dialogs/curve-properties/curve-properties-modal-test.html
@@ -14,6 +14,12 @@
 
     <link rel="stylesheet" href="css/sprite_16.css">
     <link rel="stylesheet" href="css/sprite_32.css">
+
+    <link rel="stylesheet" href="vendor/css/kendo.common-material.min.css"/>
+    <link rel="stylesheet" href="vendor/css/kendo.material.min.css"/>
+    <link rel="stylesheet" href="vendor/css/kendo.material.mobile.min.css"/>
+    <script src="vendor/js/kendo.all.min.js"></script>
+
 </head>
 <body ng-app='app'>
 <div ng-controller="SampleController">
