--- a/source/html/index.html
+++ b/source/html/index.html
@@ -51,6 +51,7 @@
     <script src="vendor/js/ng-file-upload.min.js"></script>
     <script src="vendor/js/angular-modal-service.min.js"></script>
     <script src="vendor/js/jquery-ui.js"></script>
+    <script src="vendor/js/jquery.mousewheel.min.js"></script>
     <script src='vendor/js/goldenlayout.min.js'></script>
     <script src='vendor/js/d3.min.js'></script>
     <script src='vendor/js/ResizeSensor.js'></script>
