update track properties dialog

--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -68,7 +68,7 @@
                             <div class="col-sm-6">
                                 <h5>Sample</h5>
                                 <div id="sample">
-                                    Curve Style
+                                    Line Style
                                 </div>
                             </div>
                             <div class="interpolation">
