--- a/source/dialogs/line-style/line-style-modal-test.html
+++ b/source/dialogs/line-style/line-style-modal-test.html
@@ -5,6 +5,7 @@
     <title>Test Modal</title>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/dialogs.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
@@ -19,6 +20,11 @@
     <link rel="stylesheet" href="vendor/css/kendo.material.min.css"/>
     <link rel="stylesheet" href="vendor/css/kendo.material.mobile.min.css"/>
     <script src="vendor/js/kendo.all.min.js"></script>
+
+    <script src="vendor/js/angular-sanitize.min.js"></script>
+
+    <link rel="stylesheet" href="vendor/css/select.css">
+    <script src="vendor/js/select.js"></script>
 
 </head>
 <body ng-app='app'>
