--- a/source/dialogs/line-style/line-style-modal.html
+++ b/source/dialogs/line-style/line-style-modal.html
@@ -1,5 +1,5 @@
 <div class='modal fade'>
-    <div class='modal-dialog modal-sm'>
+    <div class='modal-dialog'>
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -8,25 +8,63 @@
             <div class="modal-body text-center">
                 <form class="form-horizontal" action="" name="modalLineStyle">
                     <div class="row">
+                        <div class="col-sm-12">
                             <div class="form-group">
-                                <label class="control-label col-sm-5 normal-text" for="style">Line Style</label>
-                                <div class="col-sm-7">
-                                    <!--<select name="style" id="style"-->
-                                            <!--class="form-control wi-form-control"-->
-                                            <!--ng-model="wiModal.selectedStyle"-->
-                                            <!--ng-options="item in wiModal.styles">-->
-                                    <!--</select>-->
+                                <label class="control-label col-sm-4 normal-text" for="style">Line Width</label>
+                                <div class="col-sm-8">
+                                    <ui-select theme="bootstrap" ng-model="wiModal.width">
+                                        <ui-select-match>
+                                            <div class="col-sm-2 text-left">{{$select.selected.name}}</div>
+                                            <svg height="10" width="100%" class="col-sm-10">
+                                                <line x1="0" y1="5" x2="100%" y2="5"
+                                                      style="stroke: {{wiModal.lineColor}}; stroke-width: {{$select.selected.param}}"></line>
+                                            </svg>
+                                        </ui-select-match>
+                                        <ui-select-choices repeat="width in wiModal.widthes">
+                                            <div class="col-sm-2 text-left">{{width.name}}</div>
+                                            <svg height="10" width="100%" class="col-sm-10">
+                                                <line x1="0" y1="5" x2="100%" y2="5"
+                                                      style="stroke: {{wiModal.lineColor}}; stroke-width: {{width.param}}"></line>
+                                            </svg>
+                                        </ui-select-choices>
+                                    </ui-select>
                                 </div>
                             </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group">
-                            <label class="control-label col-sm-5 normal-text" for="color">Line Color</label>
-                            <div class="col-sm-7">
-                                <input kendo-color-picker k-palette="'websafe'"
-                                       class="form-control wi-form-control"
-                                       ng-model="wiModal.lineColor" ng-change="wiModal.getColor();"/>
-                                {{wiModal.lineColor}}
+                        </div>
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <label class="control-label col-sm-4 normal-text" for="style">Line Style</label>
+                                <div class="col-sm-8">
+                                    <ui-select theme="bootstrap" ng-model="wiModal.style">
+                                        <ui-select-match>
+                                            <svg height="10" width="100%" class="col-sm-12">
+                                                <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray={{$select.selected.param}}
+                                                      style="stroke: {{wiModal.lineColor}}; stroke-width: 1}"></line>
+                                            </svg>
+                                        </ui-select-match>
+                                        <ui-select-choices repeat="style in wiModal.styles" class="text-left">
+                                            <div class="container-fluid">
+                                                <!--<div class="col-sm-2 text-left"></div>-->
+                                                <svg height="10" width="100%" class="col-sm-12">
+                                                    <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray={{style.param}}
+                                                          style="stroke: {{wiModal.lineColor}}; stroke-width: 1"></line>
+                                                </svg>
+                                            </div>
+
+                                        </ui-select-choices>
+                                    </ui-select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <label class="control-label col-sm-4 normal-text" for="color">Line Color</label>
+                                <div class="col-sm-8 text-left">
+                                    <input kendo-color-picker k-palette="'websafe'"
+                                           class="form-control wi-form-control"
+                                           ng-model="wiModal.lineColor" ng-change="wiModal.getColor();"/>
+                                    {{wiModal.lineColor}}
+                                </div>
                             </div>
                         </div>
                     </div>
