click track properties

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -62,6 +62,12 @@
         if (window.module) module = window.module;
     </script>
     <script src="js/main.js.bundle.js"></script>
+
+    <!--select line style && line width-->
+    <script src="vendor/js/angular-sanitize.min.js"></script>
+
+    <link rel="stylesheet" href="vendor/css/select.css">
+    <script src="vendor/js/select.js"></script>
 </head>
 
 <body ng-app='wiapp'>
