--- a/source/dialogs/track-properties/track-properties-modal-test.html
+++ b/source/dialogs/track-properties/track-properties-modal-test.html
@@ -6,6 +6,8 @@
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/dialogs.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href='css/wi-tab.css' rel='stylesheet'>
+
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
